--- a/Key.env
+++ b/Key.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+export GEMINI_API_KEY="eef19d999b144dc59ca3af5fa966dece2907fda9"
